Comenzando con la estandarización de los mensajes devueltos por la API
